--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 <script src="/static/js/cropit-builder.js" type="text/javascript" charset="utf-8"></script>
 <script src="/static/js/turn.js" type="text/javascript" charset="utf-8"></script>
 <script src="/static/js/artron.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/jquery.qrcode.min.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
