--- a/multiple/index.html
+++ b/multiple/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="zh_CN">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>雅昌影像-专业定制照片画册,装饰画,海报,挂历</title>
-  <meta name="Keywords" content="传给雅昌,画册,装饰画,有框画,海报定制,挂历2018"/>
-  <meta name="Description" content="传给雅昌是雅昌集团旗下中国最大的专业艺术影像输出平台，提供画册、装饰画、框画、海报、挂历等照片产品的个性定制服务。您选一张照片，我送您一件艺术品。"/>
+  <meta charset="utf-8">
+  <title>artup</title>
+  <link rel="stylesheet" type="text/css" href="/static/font/iconfont.css"/>
 </head>
 <body>
-
+<div id="app"></div>
+<script src="/static/js/jquery.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/drag.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/public.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/resumable-1.0.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/jquery.cropit.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/cropit-builder.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/turn.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/artron.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/jquery.qrcode.min.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
