--- a/multiple/index.html
+++ b/multiple/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="utf-8">
   <title>artup</title>
-  <link rel="stylesheet" type="text/css" href="./static/font/iconfont.css"/>
+  <link rel="stylesheet" type="text/css" href="/static/font/iconfont.css"/>
 </head>
 <body>
 <div id="app"></div>
-<script src="./static/js/jquery.js" type="text/javascript" charset="utf-8"></script>
-<script src="./static/js/drag.js" type="text/javascript" charset="utf-8"></script>
-<script src="./static/js/public.js" type="text/javascript" charset="utf-8"></script>
-<script src="./static/js/resumable-1.0.js" type="text/javascript" charset="utf-8"></script>
-<script src="./static/js/jquery.cropit.js" type="text/javascript" charset="utf-8"></script>
-<script src="./static/js/cropit-builder.js" type="text/javascript" charset="utf-8"></script>
-<script src="./static/js/turn.js" type="text/javascript" charset="utf-8"></script>
-<script src="./static/js/artron.js" type="text/javascript" charset="utf-8"></script>
-<script src="./static/js/jquery.qrcode.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/jquery.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/drag.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/public.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/resumable-1.0.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/jquery.cropit.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/cropit-builder.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/turn.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/artron.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/jquery.qrcode.min.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
