--- a/multiple/welcome.html
+++ b/multiple/welcome.html
@@ -22,9 +22,81 @@
       <h3 class="title">家丶书</h3>
       <div class="starting-price">
         <label>起始价格</label>
-        <span>￥499CNY</span>
+        <span>￥ 499 CNY</span>
       </div>
       <a href="#" class="btn">开始定制</a>
+    </div>
+    <div class="art-album">
+      <h4 class="subtitle">让您的展览永不落寞</h4>
+      <h3 class="title">艺术画册</h3>
+      <div class="starting-price">
+        <label>起始价格</label>
+        <span>￥ 499 CNY</span>
+      </div>
+      <a href="#" class="btn">开始定制</a>
+    </div>
+    <div class="magnet">
+      <h4 class="subtitle">随时更换，永远新鲜</h4>
+      <h3 class="title">艺术磁贴画</h3>
+      <div class="starting-price">
+        <label>起始价格</label>
+        <span>￥ 499 CNY</span>
+      </div>
+      <a href="#" class="btn">开始定制</a>
+    </div>
+    <div class="frame-picture">
+      <h4 class="subtitle">您专属的影像画廊</h4>
+      <h3 class="title">艺术框画</h3>
+      <div class="starting-price">
+        <label>起始价格</label>
+        <span>￥ 499 CNY</span>
+      </div>
+      <a href="#" class="btn">开始定制</a>
+    </div>
+    <div class="posters">
+      <h4 class="subtitle">您专属的影像画廊</h4>
+      <h3 class="title">艺术海报</h3>
+      <div class="starting-price">
+        <label>起始价格</label>
+        <span>￥ 499 CNY</span>
+      </div>
+      <a href="#" class="btn">开始定制</a>
+    </div>
+    <div class="posters">
+      <h4 class="subtitle">您专属的影像画廊</h4>
+      <h3 class="title">艺术海报</h3>
+      <div class="starting-price">
+        <label>起始价格</label>
+        <span>￥ 499 CNY</span>
+      </div>
+      <a href="#" class="btn">开始定制</a>
+    </div>
+    <div class="desk-calendar">
+      <h4 class="subtitle">您专属的影像画廊</h4>
+      <h3 class="title">艺术台历</h3>
+      <div class="starting-price">
+        <label>起始价格</label>
+        <span>￥ 499 CNY</span>
+      </div>
+      <a href="#" class="btn">开始定制</a>
+    </div>
+    <div class="wall-calendar">
+      <h4 class="subtitle">您专属的影像画廊</h4>
+      <h3 class="title">艺术挂历</h3>
+      <div class="starting-price">
+        <label>起始价格</label>
+        <span>￥ 499 CNY</span>
+      </div>
+      <a href="#" class="btn">开始定制</a>
+    </div>
+    <div class="awards">
+      <h4 class="subtitle">为专业摄影师服务二十余载，雅昌建立行业标准</h4>
+      <h3 class="title">匠心工艺</h3>
+      <div class="play">
+        <a href="javascript:void(0);" class="play-btn"></a>
+      </div>
+      <p class="describe">雅昌艺术印刷，作为世界艺术印刷的引领者，
+        在与国际顶级的技术和材料供应商建立战略合作的过程中，独创了一套满足艺术印刷标准的技术和管理体系，曾先后斩获各类国际印刷大奖700多项，十次问鼎被誉为全球印刷界“奥斯卡”的美国印刷大奖，让东方的雅艺之道，成就世界之最的印艺之美。</p>
     </div>
   </div>
   <unify-footer></unify-footer>
