--- a/multiple/framed-pictures.html
+++ b/multiple/framed-pictures.html
@@ -7,6 +7,10 @@
   <meta name="Description" content="传给雅昌手工打造定制框画装饰画，将您的摄影作品完美制作成家居装饰画，客厅、卧室、餐厅、玄关，打造您专属的影像画廊。"/>
 </head>
 <body>
-
+	<div id="app">
+		 <unify-header></unify-header>
+		 
+  		<unify-footer></unify-footer>
+	</div>
 </body>
 </html>
