--- a/multiple/framed-pictures.html
+++ b/multiple/framed-pictures.html
@@ -9,7 +9,91 @@
 <body>
 	<div id="app">
 		 <unify-header></unify-header>
-		 
+		 <div class="container">
+		 	<div class="pageTitle">
+		        <h2 class="pageTitleTop">艺术框画</h2>
+		        <p class="pageTitleMid">艺术和现代工艺的完美结合</p>
+		        <p class="pageTitleDetail"><span>更多详情</span></p>
+		    </div>
+		    <div class="bothSides">
+		       <div class="imgBoxList">
+			       <div id="picContainer">
+			       				
+			       </div>
+		       	  <div class="boxA">
+		       	  	<span class="sizeFrame">A</span>
+		       	  </div>
+		       	  <div class="boxB">
+		       	  	<span class="sizeFrame">B</span>
+		       	  </div>
+		       	   <div class="boxC">
+		       	  	<span class="sizeFrame">C</span>
+		       	  </div>
+		       	   <div class="boxD">
+		       	  	<span class="sizeFrame">D</span>
+		       	  </div>
+		       	   <div class="boxE">
+		       	  	<span class="sizeFrame">E</span>
+		       	  </div>
+		       </div>
+		       <div class="typeBox">
+		       		<div class="btnChoose">选择尺寸</div>
+		       		<div class="sizeBox">
+		       			<div class="k1_Foot1size_click" sizeType='A'>A&nbsp; 400×500 mm </div>
+		       			<div class="k1_Foot1size_click" sizeType='B'>B&nbsp; 500×400 mm </div>
+		       			<div class="k1_Foot1size_click" sizeType='C'>C&nbsp; 500×500 mm </div>
+		       			<div class="k1_Foot1size_click" sizeType='D'>D&nbsp; 530×740 mm </div>
+		       			<div class="k1_Foot1size_click" sizeType='E'>E&nbsp; 740×530 mm </div>
+		       		</div>
+		       		<div class="btnChoose">选择边框</div>
+		       		<div class="frameBox">
+		       			<div class="picAndText">
+		       				<div class="kuangAngle" frameType='zm' style="background-image:url(imgs/kuanghua/angle-zm.png)"></div>
+		       				<div class="k1_Foot1frame_click k1_pre_frame">棕色木框</div>
+		       			</div>
+		       			<div class="picAndText">
+		       				<div class="kuangAngle" frameType='yxl' style="background-image:url(imgs/kuanghua/angle-yxl.png)"></div>
+		       				<div class="k1_Foot1frame_click k1_pre_frame">银细边铝框</div>
+		       			</div>
+		       			<div class="picAndText">
+		       				<div class="kuangAngle" frameType='ypl' style="background-image:url(imgs/kuanghua/angle-ypl.png)"></div>
+		       				<div class="k1_Foot1frame_click k1_pre_frame">银平面铝框</div>
+		       			</div>
+		       			<div class="picAndText">
+		       				<div class="kuangAngle" frameType='ym' style="background-image:url(imgs/kuanghua/angle-ym.png)"></div>
+		       				<div class="k1_Foot1frame_click k1_pre_frame">原木色木框</div>
+		       			</div>
+		       			<div class="picAndText">
+		       				<div class="kuangAngle" frameType='yll' style="background-image:url(imgs/kuanghua/angle-yll.png)"></div>
+		       				<div class="k1_Foot1frame_click k1_pre_frame">银立体铝框</div>
+		       			</div>
+		       			<div class="picAndText">
+		       				<div class="kuangAngle" frameType='ykl' style="background-image:url(imgs/kuanghua/angle-ykl.png)"></div>
+		       				<div class="k1_Foot1frame_click k1_pre_frame">银宽边铝框</div>
+		       			</div>
+		       			<div class="picAndText">
+		       				<div class="kuangAngle" frameType='hpl' style="background-image:url(imgs/kuanghua/angle-hpl.png)"></div>
+		       				<div class="k1_Foot1frame_click k1_pre_frame">黑平面铝框</div>
+		       			</div>
+		       			<div class="picAndText">
+		       				<div class="kuangAngle" frameType='hkl' style="background-image:url(imgs/kuanghua/angle-hkl.png)"></div>
+		       				<div class="k1_Foot1frame_click k1_pre_frame">黑宽边铝框</div>
+		       			</div>
+		       			<div class="picAndText">
+		       				<div class="kuangAngle" frameType='hxl' style="background-image:url(imgs/kuanghua/angle-hxl.png)"></div>
+		       				<div class="k1_Foot1frame_click k1_pre_frame">黑细边铝框</div>
+		       			</div>
+		       		</div>
+		       		<div class="rightBottom">
+	                    <div class="showPrice">
+	                        ￥ : <span class="price_show">289</span><span class="skuCode" style="display: none"></span>
+	                    </div>
+	                    <div class="startBook">开始定制</div>
+	                </div>
+		       </div>
+		       
+		    </div>
+		 </div>
   		<unify-footer></unify-footer>
 	</div>
 </body>
