--- a/multiple/framed-pictures.html
+++ b/multiple/framed-pictures.html
@@ -5,6 +5,11 @@
   <title>雅昌影像-框画挂画,家居装饰,摄影作品装饰画-传给雅昌专业定制</title>
   <meta name="Keywords" content="装饰画,有框画,无框画,挂画,照片墙,框画定制"/>
   <meta name="Description" content="传给雅昌手工打造定制框画装饰画，将您的摄影作品完美制作成家居装饰画，客厅、卧室、餐厅、玄关，打造您专属的影像画廊。"/>
+  <style>
+    body {
+      opacity: 0;
+    }
+  </style>
 </head>
 <body>
 	<div id="app">
