--- a/multiple/framed-pictures.html
+++ b/multiple/framed-pictures.html
@@ -53,39 +53,39 @@
 		       		<div class="btnChoose">选择边框</div>
 		       		<div class="frameBox">
 		       			<div class="picAndText">
-		       				<div class="kuangAngle" frameType='zm' style="background-image:url(http://test.artup.com/builder/imgs/kuanghua/angle-zm.png)"></div>
+		       				<div class="kuangAngle" frameType='zm' style="background-image:url(http://image2.artup.com/static/pc/imgs/kuanghua/angle-zm.png)"></div>
 		       				<div class="k1_Foot1frame_click k1_pre_frame">棕色木框</div>
 		       			</div>
 		       			<div class="picAndText">
-		       				<div class="kuangAngle" frameType='yxl' style="background-image:url(http://test.artup.com/builder/imgs/kuanghua/angle-yxl.png)"></div>
+		       				<div class="kuangAngle" frameType='yxl' style="background-image:url(http://image2.artup.com/static/pc/imgs/kuanghua/angle-yxl.png)"></div>
 		       				<div class="k1_Foot1frame_click k1_pre_frame">银细边铝框</div>
 		       			</div>
 		       			<div class="picAndText">
-		       				<div class="kuangAngle" frameType='ypl' style="background-image:url(http://test.artup.com/builder/imgs/kuanghua/angle-ypl.png)"></div>
+		       				<div class="kuangAngle" frameType='ypl' style="background-image:url(http://image2.artup.com/static/pc/imgs/kuanghua/angle-ypl.png)"></div>
 		       				<div class="k1_Foot1frame_click k1_pre_frame">银平面铝框</div>
 		       			</div>
 		       			<div class="picAndText">
-		       				<div class="kuangAngle" frameType='ym' style="background-image:url(http://test.artup.com/builder/imgs/kuanghua/angle-ym.png)"></div>
+		       				<div class="kuangAngle" frameType='ym' style="background-image:url(http://image2.artup.com/static/pc/imgs/kuanghua/angle-ym.png)"></div>
 		       				<div class="k1_Foot1frame_click k1_pre_frame">原木色木框</div>
 		       			</div>
 		       			<div class="picAndText">
-		       				<div class="kuangAngle" frameType='yll' style="background-image:url(http://test.artup.com/builder/imgs/kuanghua/angle-yll.png)"></div>
+		       				<div class="kuangAngle" frameType='yll' style="background-image:url(http://image2.artup.com/static/pc/imgs/kuanghua/angle-yll.png)"></div>
 		       				<div class="k1_Foot1frame_click k1_pre_frame">银立体铝框</div>
 		       			</div>
 		       			<div class="picAndText">
-		       				<div class="kuangAngle" frameType='ykl' style="background-image:url(http://test.artup.com/builder/imgs/kuanghua/angle-ykl.png)"></div>
+		       				<div class="kuangAngle" frameType='ykl' style="background-image:url(http://image2.artup.com/static/pc/imgs/kuanghua/angle-ykl.png)"></div>
 		       				<div class="k1_Foot1frame_click k1_pre_frame">银宽边铝框</div>
 		       			</div>
 		       			<div class="picAndText">
-		       				<div class="kuangAngle" frameType='hpl' style="background-image:url(http://test.artup.com/builder/imgs/kuanghua/angle-hpl.png)"></div>
+		       				<div class="kuangAngle" frameType='hpl' style="background-image:url(http://image2.artup.com/static/pc/imgs/kuanghua/angle-hpl.png)"></div>
 		       				<div class="k1_Foot1frame_click k1_pre_frame">黑平面铝框</div>
 		       			</div>
 		       			<div class="picAndText">
-		       				<div class="kuangAngle" frameType='hkl' style="background-image:url(http://test.artup.com/builder/imgs/kuanghua/angle-hkl.png)"></div>
+		       				<div class="kuangAngle" frameType='hkl' style="background-image:url(http://image2.artup.com/static/pc/imgs/kuanghua/angle-hkl.png)"></div>
 		       				<div class="k1_Foot1frame_click k1_pre_frame">黑宽边铝框</div>
 		       			</div>
 		       			<div class="picAndText">
-		       				<div class="kuangAngle" frameType='hxl' style="background-image:url(http://test.artup.com/builder/imgs/kuanghua/angle-hxl.png)"></div>
+		       				<div class="kuangAngle" frameType='hxl' style="background-image:url(http://image2.artup.com/static/pc/imgs/kuanghua/angle-hxl.png)"></div>
 		       				<div class="k1_Foot1frame_click k1_pre_frame">黑细边铝框</div>
 		       			</div>
 		       		</div>
