--- a/multiple/framed-pictures.html
+++ b/multiple/framed-pictures.html
@@ -25,19 +25,19 @@
 			       <div class="picContainer picContainerOne" :style="{backgroundImage:'url('+picturePrefix+previewImageUrl+')'}">
 			       				
 			       </div>
-		       	  <div class="boxA">
+		       	  <div class="boxA shwoImgBox">
 		       	  	<span class="sizeFrame">A</span>
 		       	  </div>
-		       	  <div class="boxB">
-		       	  	<span class="sizeFrame">B</span>
+		       	  <div class="boxB shwoImgBox">
+		       	  	<span class="sizeFrame shwoImgBox">B</span>
 		       	  </div>
-		       	   <div class="boxC">
+		       	   <div class="boxC shwoImgBox">
 		       	  	<span class="sizeFrame">C</span>
 		       	  </div>
-		       	   <div class="boxD">
+		       	   <div class="boxD shwoImgBox">
 		       	  	<span class="sizeFrame">D</span>
 		       	  </div>
-		       	   <div class="boxE">
+		       	   <div class="boxE shwoImgBox">
 		       	  	<span class="sizeFrame">E</span>
 		       	  </div>
 		       </div>
