--- a/multiple/album.html
+++ b/multiple/album.html
@@ -46,7 +46,7 @@
 		       <div class="typeBox">
 		       		<div class="btnChoose">选择尺寸</div>
 		       		<div class="sizeBox">
-		       			<div @click='updateSizeFn(index)' v-for='(frameSize,index) in frameSize' class="k1_Foot1size_click" sizeType='A' :size='frameSize.code'>{{frameSize.name}}</div>
+		       			<div @click='updateSizeFn(index)' v-for='(frameSize,index) in frameSize' class="k1_Foot1size_click" :sizeType='frameSize.name | firstCode' :size='frameSize.code'>{{frameSize.name}}</div>
 		       			
 
 		       		</div>
