--- a/multiple/desk.html
+++ b/multiple/desk.html
@@ -32,12 +32,6 @@
 		       	  <div class="boxB">
 		       	  	<span class="sizeFrame">B</span>
 		       	  </div>
-		       	   <div class="boxC">
-		       	  	<span class="sizeFrame">C</span>
-		       	  </div>
-		       	   <div class="boxD">
-		       	  	<span class="sizeFrame">D</span>
-		       	  </div>
 		       </div>
 		       <div class="imgBoxList" v-show="frameShowBool">
 			       <div  class="picContainerTwo picContainer " style="background-image: url(https://www.artup.com/img/tl_icon13.png)">		
@@ -66,7 +60,7 @@
 	                    <div class="showPrice">
 	                        ￥ : <span class="price_show">{{price}}</span><span class="skuCode" style="display: none"></span>
 	                    </div>
-	                    <a href="/album/tlEdit"><div class="startBook">开始定制</div></a>
+	                    <a @click="startCustom"><div class="startBook">开始定制</div></a>
 	                </div>
 		       </div>
 		       
