--- a/multiple/welcome.html
+++ b/multiple/welcome.html
@@ -23,13 +23,13 @@
       </el-carousel>
     </div>
     <div class="letter">
-      <h4 class="subtitle">家族记忆，百年传承</h4>
-      <h3 class="title">家丶书</h3>
+      <h4 class="subtitle">拾起流逝时光，甄选记忆宝藏</h4>
+      <h3 class="title">时光集</h3>
       <div class="starting-price">
         <label>起始价格</label>
-        <span>￥ 499 CNY</span>
+        <span>￥ 299 CNY</span>
       </div>
-      <a href="#" class="btn">开始定制</a>
+      <a href="/album/imgEditMsg?category=baobaoshu&tplCode=pc_baobaoshu_170-235_24_single&defDbId=7ad740df-0b81-418f-b4b5-c078ef580b47" class="btn">开始定制</a>
     </div>
     <div class="art-album">
       <h4 class="subtitle">让您的展览永不落寞</h4>
@@ -38,44 +38,44 @@
         <label>起始价格</label>
         <span>￥ 499 CNY</span>
       </div>
-      <a href="#" class="btn">开始定制</a>
+      <a href="/album.html?category=huace&defDbId=9de2973d-3487-4b05-b556-b9b92dd75493" class="btn">开始定制</a>
     </div>
-    <div class="magnet">
-      <h4 class="subtitle">随时更换，永远新鲜</h4>
-      <h3 class="title">艺术磁贴画</h3>
-      <div class="starting-price">
-        <label>起始价格</label>
-        <span>￥ 499 CNY</span>
-      </div>
-      <a href="#" class="btn">开始定制</a>
-    </div>
+    <!--<div class="magnet">-->
+      <!--<h4 class="subtitle">随时更换，永远新鲜</h4>-->
+      <!--<h3 class="title">艺术磁贴画</h3>-->
+      <!--<div class="starting-price">-->
+        <!--<label>起始价格</label>-->
+        <!--<span>￥ 499 CNY</span>-->
+      <!--</div>-->
+      <!--<a href="#" class="btn">开始定制</a>-->
+    <!--</div>-->
     <div class="frame-picture">
       <h4 class="subtitle">您专属的影像画廊</h4>
       <h3 class="title">艺术框画</h3>
       <div class="starting-price">
         <label>起始价格</label>
-        <span>￥ 499 CNY</span>
+        <span>￥ 289 CNY</span>
       </div>
-      <a href="#" class="btn">开始定制</a>
+      <a href="/framed-pictures.html?category=kuanghua&defDbId=6afedcf6-b0e4-447d-afd9-c70449f42f50" class="btn">开始定制</a>
     </div>
     <div class="posters">
       <h4 class="subtitle">您专属的影像画廊</h4>
       <h3 class="title">艺术海报</h3>
       <div class="starting-price">
         <label>起始价格</label>
-        <span>￥ 499 CNY</span>
+        <span>￥ 40 CNY</span>
       </div>
-      <a href="#" class="btn">开始定制</a>
+      <a href="/poster.html?category=haibao&defDbId=d6e44ca4-511f-41d5-87df-d8d75a491c09" class="btn">开始定制</a>
     </div>
-    <div class="posters">
-      <h4 class="subtitle">您专属的影像画廊</h4>
-      <h3 class="title">艺术海报</h3>
-      <div class="starting-price">
-        <label>起始价格</label>
-        <span>￥ 499 CNY</span>
-      </div>
-      <a href="#" class="btn">开始定制</a>
-    </div>
+    <!--<div class="posters">-->
+      <!--<h4 class="subtitle">您专属的影像画廊</h4>-->
+      <!--<h3 class="title">艺术海报</h3>-->
+      <!--<div class="starting-price">-->
+        <!--<label>起始价格</label>-->
+        <!--<span>￥ 499 CNY</span>-->
+      <!--</div>-->
+      <!--<a href="#" class="btn">开始定制</a>-->
+    <!--</div>-->
     <div class="desk-calendar">
       <h4 class="subtitle">您专属的影像画廊</h4>
       <h3 class="title">艺术台历</h3>
@@ -83,17 +83,17 @@
         <label>起始价格</label>
         <span>￥ 499 CNY</span>
       </div>
-      <a href="#" class="btn">开始定制</a>
+      <a href="/desk.html?category=taili&defDbId=f80b4c98-15ca-4da0-b482-0c8270c2eac6" class="btn">开始定制</a>
     </div>
-    <div class="wall-calendar">
-      <h4 class="subtitle">您专属的影像画廊</h4>
-      <h3 class="title">艺术挂历</h3>
-      <div class="starting-price">
-        <label>起始价格</label>
-        <span>￥ 499 CNY</span>
-      </div>
-      <a href="#" class="btn">开始定制</a>
-    </div>
+    <!--<div class="wall-calendar">-->
+      <!--<h4 class="subtitle">您专属的影像画廊</h4>-->
+      <!--<h3 class="title">艺术挂历</h3>-->
+      <!--<div class="starting-price">-->
+        <!--<label>起始价格</label>-->
+        <!--<span>￥ 499 CNY</span>-->
+      <!--</div>-->
+      <!--<a href="#" class="btn">开始定制</a>-->
+    <!--</div>-->
     <div class="awards">
       <h4 class="subtitle">为专业摄影师服务二十余载，雅昌建立行业标准</h4>
       <h3 class="title">匠心工艺</h3>
