--- a/multiple/welcome.html
+++ b/multiple/welcome.html
@@ -24,7 +24,7 @@
     </div>
     <div class="letter">
       <h4 class="subtitle">拾起流逝时光，甄选记忆宝藏</h4>
-      <h3 class="title">时光集</h3>
+      <h3 class="title">小时光</h3>
       <div class="starting-price">
         <label>起始价格</label>
         <span>￥ 299 CNY</span>
