--- a/multiple/album.html
+++ b/multiple/album.html
@@ -18,7 +18,7 @@
         <div class="pageTitle">
             <h2 class="pageTitleTop">艺术画册</h2>
             <p class="pageTitleMid">以匠心工艺还原最真实的影像，打造收藏级摄影作品集</p>
-            <p class="pageTitleDetail"><span>更多详情</span></p>
+            <!--<p class="pageTitleDetail"><span>更多详情</span></p>-->
         </div>
         <div class="bothSides">
             <div class="imgBoxList" v-show="!frameShowBool">
