--- a/multiple/desk.html
+++ b/multiple/desk.html
@@ -22,7 +22,7 @@
 		        <!--<p class="pageTitleDetail"><span>更多详情</span></p>-->
 		    </div>
 		    <div class="bothSides">
-		       <div class="imgBoxList" v-show="!frameShowBool">
+		       <div style="left: 120px;pointer-events: none" class="imgBoxList" v-show="!frameShowBool">
 			       <div id="picContainer" class="picContainer picContainerOne" :style="{backgroundImage:'url('+picturePrefix+previewImageUrl+')'}">
 
 			       </div>
