--- a/multiple/poster.html
+++ b/multiple/poster.html
@@ -21,7 +21,7 @@
 	        <!--<p class="pageTitleDetail"><span>更多详情</span></p>-->
 	    </div>
 	    <div class="bothSides">
-		       <div class="imgBoxList"  v-show="!frameShowBool">
+		       <div style="left: 120px;pointer-events: none" class="imgBoxList"  v-show="!frameShowBool">
 			       <div class="picContainer picContainerOne" :style="{'backgroundImage':'url('+picturePrefix+previewImageUrl+')'}">
 			       </div>
 		       	  <div class="boxA shwoImgBox">
