--- a/multiple/index.html
+++ b/multiple/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>artup</title>
+  <title>雅昌影像</title>
   <link rel="stylesheet" type="text/css" href="<%= htmlWebpackPlugin.options.resourcePrefix %>static/font/iconfont.css"/>
 </head>
 <body>
