提交合集产品

--- a/multiple/heji.html
+++ b/multiple/heji.html
@@ -282,11 +282,11 @@
                   <li>10张</li>
                 </ul>
                 <ul>
-                  <li>￥289CNY</li>
+                  <li>￥{{price}} CNY</li>
                 </ul>
                 <ul>
                   <li>
-                    <a href="#">开始定制</a>
+                    <a href="/album/hejiEdit">开始定制</a>
                   </li>
                 </ul>
               </div>
