--- a/multiple/lxj.html
+++ b/multiple/lxj.html
@@ -338,12 +338,11 @@
                 <li>32页</li>
               </ul>
               <ul>
-
-                <li style="width:220px;">￥299CNY<span style="display:none;text-decoration: line-through;margin-left:20px;color:gray;">￥299CNY</span></li>
+                <li style="width:220px;">￥{{price}} CNY<span style="display:none;text-decoration: line-through;margin-left:20px;color:gray;">￥{{price}} CNY</span></li>
               </ul>
               <ul>
                 <li>
-                  <a href="#">开始定制</a>
+                  <a onclick="alert('产品开发中...')" href="#">开始定制</a>
                 </li>
               </ul>
             </div>
