--- a/multiple/lxj.html
+++ b/multiple/lxj.html
@@ -342,7 +342,7 @@
               </ul>
               <ul>
                 <li>
-                  <a onclick="alert('产品开发中...')" href="#">开始定制</a>
+                  <a  href="/album/travelEdit">开始定制</a>
                 </li>
               </ul>
             </div>
