--- a/multiple/heji.html
+++ b/multiple/heji.html
@@ -282,7 +282,7 @@
                   <li>10张</li>
                 </ul>
                 <ul>
-                  <li>￥{{price}} CNY</li>
+                  <li>￥{{price}} </li>
                 </ul>
                 <ul>
                   <li>
