--- a/multiple/heji.html
+++ b/multiple/heji.html
@@ -286,7 +286,7 @@
                 </ul>
                 <ul>
                   <li>
-                    <a href="/album/hejiEdit">开始定制</a>
+                    <a @click="startCustom">开始定制</a>
                   </li>
                 </ul>
               </div>
