--- a/multiple/lxj.html
+++ b/multiple/lxj.html
@@ -342,7 +342,7 @@
               </ul>
               <ul>
                 <li>
-                  <a  href="/album/travelEdit">开始定制</a>
+                  <a  @click="startCustom" >开始定制</a>
                 </li>
               </ul>
             </div>
